look and feel mostly

--- a/java/src/com/mynumnum/drivewire/shared/DriveWire.css
+++ b/java/src/com/mynumnum/drivewire/shared/DriveWire.css
@@ -35,3 +35,13 @@ table.sample tr.h1 td {
 	background-color: #CCCCCC;
 	font-weight: bold;
 }
+
+
+#tabby {
+	background-color: #4488AA;	
+	font-weight: bold;
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	
+	}
